# RPA

./: .gitignore  README.md  pyproject.toml
src/RPA/: main.py
src/RPA/core/: __init__.py  cut.py  merge.py
src/RPA/utils/: __init__.py  clear.py
