# ==============================
# Configuração do projeto
# ==============================

[project]
name = "RPA"
version = "0.1.0"
description = "RPA examples"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "file-picker-py>=0.2.0",
    "pandas>=2.3.3",
]

# Localização dos pacotes
[tool.setuptools.packages.find]
where = ["src"]
